tests/typing/bad/testfile-assign-3.c

int main() { int x, y; (x+y) = 2; }
